Shell: add ViewModelStore implementation
* Create IViewModel interface for ViewModels
* Add ViewModelStore to share ViewModel instances between pages in Shell frame (inspired by AndroidX implementation)
* Remove ViewModels from Navigation arguments

--- a/SimpleWeather.UWP/Main/WeatherChartsPage.xaml
+++ b/SimpleWeather.UWP/Main/WeatherChartsPage.xaml
@@ -36,7 +36,7 @@
             IsItemClickEnabled="False"
             IsMultiSelectCheckBoxEnabled="False"
             IsSwipeEnabled="False"
-            ItemsSource="{x:Bind GraphModels, Mode=OneWay}"
+            ItemsSource="{x:Bind ChartsView.GraphModels, Mode=OneWay}"
             SelectionMode="None">
             <ItemsControl.ItemTemplate>
                 <DataTemplate x:DataType="controls:ForecastGraphViewModel">
