--- a/SimpleWeather.UWP/Preferences/Settings_Credits.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_Credits.xaml
@@ -16,11 +16,13 @@
                     <x:String x:Key="HereImageSrc">ms-appx:///SimpleWeather.Shared/Assets/Providers/here_dark.png</x:String>
                     <x:String x:Key="YahooImageSrc">ms-appx:///SimpleWeather.Shared/Assets/Providers/yahoo_dark.png</x:String>
                     <x:String x:Key="BingImageSrc">ms-appx:///SimpleWeather.Shared/Assets/Providers/bingmaps_dark.png</x:String>
+                    <x:String x:Key="WeatherApiImageSrc">ms-appx:///SimpleWeather.Shared/Assets/Providers/weatherapi_logo_dark.png</x:String>
                 </ResourceDictionary>
                 <ResourceDictionary x:Key="Light">
                     <x:String x:Key="HereImageSrc">ms-appx:///SimpleWeather.Shared/Assets/Providers/here.png</x:String>
                     <x:String x:Key="YahooImageSrc">ms-appx:///SimpleWeather.Shared/Assets/Providers/yahoo.png</x:String>
                     <x:String x:Key="BingImageSrc">ms-appx:///SimpleWeather.Shared/Assets/Providers/bingmaps.png</x:String>
+                    <x:String x:Key="WeatherApiImageSrc">ms-appx:///SimpleWeather.Shared/Assets/Providers/weatherapi_logo.png</x:String>
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
@@ -119,6 +121,15 @@
                             Foreground="{ThemeResource ApplicationForegroundThemeBrush}"
                             ShowAsMonochrome="True"
                             UriSource="ms-appx:///SimpleWeather.Shared/Assets/Providers/wunlocked.png" />
+                    </HyperlinkButton>
+                </StackPanel>
+                <StackPanel Padding="10">
+                    <TextBlock Style="{StaticResource SubtitleTextBlockStyle}" Text="WeatherAPI.com" />
+                    <HyperlinkButton Padding="0,10" NavigateUri="https://www.weatherapi.com/">
+                        <Image
+                            Height="50"
+                            HorizontalAlignment="Left"
+                            Source="{ThemeResource WeatherApiImageSrc}" />
                     </HyperlinkButton>
                 </StackPanel>
                 <ContentPresenter x:Uid="Pref_TitleIcons" Content="Icons">
